--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,48 @@
         </ImageView>
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="330dp"
+        android:layout_height="8dp"
+        android:background="#F69e78"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/btn5"
+        android:layout_marginBottom="8dp">
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="330dp"
+        android:layout_height="8dp"
+        android:background="#F69e78"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/btn5"
+        android:layout_marginTop="8dp">
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="8dp"
+        android:layout_height="350dp"
+        android:background="#F69e78"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/btn5"
+        android:layout_marginRight="-14dp">
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="8dp"
+        android:layout_height="350dp"
+        android:background="#F69e78"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/btn5"
+        android:layout_marginLeft="-14dp">
+
+    </RelativeLayout>
 
 
 
