--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,5 +69,73 @@
     </RelativeLayout>
 
 
+    <Button
+        android:layout_width="320dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/btn8"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:text="Reset"
+        android:id="@+id/Reset"
+        android:textSize="15sp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/purple_200">
+
+    </Button>
+
+    <RelativeLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/btn8"
+        android:layout_below="@+id/btn5"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="343e56">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background"
+            android:id="@+id/buttonImage8">
+
+        </ImageView>
+    </RelativeLayout>
+
+
+
+<LinearLayout
+    android:layout_width="250dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingRight="40dp"
+    android:paddingLeft="40dp"
+    android:layout_marginTop="40dp"
+    android:layout_centerHorizontal="true">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Score X :- 0"
+        android:textSize="30sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:id="@+id/ScoreX">
+
+    </TextView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Score Y :- 0"
+        android:textSize="30sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:id="@+id/ScoreY">
+
+    </TextView>
+</LinearLayout>
+
 
 </RelativeLayout>
