--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,46 @@
         android:background="343e56">
 
         <ImageView
+            android:id="@+id/buttonImage5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background">
+
+        </ImageView>
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/btn4"
+        android:layout_toLeftOf="@+id/btn5"
+        android:background="343e56">
+
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/ic_launcher_background"
-            android:id="@+id/buttonImage5">
+            android:id="@+id/buttonImage4">
+
+        </ImageView>
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/btn6"
+        android:layout_toRightOf="@+id/btn5"
+        android:background="343e56">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background"
+            android:id="@+id/buttonImage6">
 
         </ImageView>
     </RelativeLayout>
@@ -95,14 +131,54 @@
         android:background="343e56">
 
         <ImageView
+            android:id="@+id/buttonImage8"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_launcher_background"
-            android:id="@+id/buttonImage8">
+            android:src="@drawable/ic_launcher_background">
 
         </ImageView>
     </RelativeLayout>
 
+
+    <RelativeLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/btn7"
+        android:layout_below="@+id/btn5"
+        android:layout_marginTop="20dp"
+        android:layout_toLeftOf="@+id/btn8"
+        android:background="343e56">
+
+        <ImageView
+            android:id="@+id/buttonImage7"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background">
+
+        </ImageView>
+    </RelativeLayout>
+
+
+
+    <RelativeLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/btn9"
+        android:layout_below="@+id/btn5"
+        android:layout_marginTop="20dp"
+        android:layout_toRightOf="@+id/btn8"
+        android:background="343e56">
+
+        <ImageView
+            android:id="@+id/buttonImage9"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background">
+
+        </ImageView>
+    </RelativeLayout>
 
 
 <LinearLayout
@@ -136,6 +212,65 @@
 
     </TextView>
 </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/btn2"
+        android:layout_above="@+id/btn5"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="343e56">
+
+        <ImageView
+            android:id="@+id/buttonImage2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background">
+
+        </ImageView>
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/btn1"
+        android:layout_above="@+id/btn5"
+        android:layout_marginBottom="20dp"
+        android:layout_toLeftOf="@+id/btn2"
+        android:background="343e56">
+
+        <ImageView
+            android:id="@+id/buttonImage1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background">
+
+        </ImageView>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/btn3"
+        android:layout_above="@+id/btn5"
+        android:layout_marginBottom="20dp"
+        android:layout_toRightOf="@+id/btn2"
+        android:background="343e56">
+
+        <ImageView
+            android:id="@+id/buttonImage3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_launcher_background">
+
+        </ImageView>
+    </RelativeLayout>
 
 
 </RelativeLayout>
