all condition work is done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:id="@+id/btn5"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="343e56">
+        android:background="#343e56">
 
         <ImageView
             android:id="@+id/buttonImage5"
@@ -32,7 +32,7 @@
         android:layout_centerInParent="true"
         android:id="@+id/btn4"
         android:layout_toLeftOf="@+id/btn5"
-        android:background="343e56">
+        android:background="#343e56">
 
         <ImageView
             android:layout_width="match_parent"
@@ -50,7 +50,7 @@
         android:layout_centerInParent="true"
         android:id="@+id/btn6"
         android:layout_toRightOf="@+id/btn5"
-        android:background="343e56">
+        android:background="#343e56">
 
         <ImageView
             android:layout_width="match_parent"
@@ -128,7 +128,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="343e56">
+        android:background="#343e56">
 
         <ImageView
             android:id="@+id/buttonImage8"
@@ -148,7 +148,7 @@
         android:layout_below="@+id/btn5"
         android:layout_marginTop="20dp"
         android:layout_toLeftOf="@+id/btn8"
-        android:background="343e56">
+        android:background="#343e56">
 
         <ImageView
             android:id="@+id/buttonImage7"
@@ -169,7 +169,7 @@
         android:layout_below="@+id/btn5"
         android:layout_marginTop="20dp"
         android:layout_toRightOf="@+id/btn8"
-        android:background="343e56">
+        android:background="#343e56">
 
         <ImageView
             android:id="@+id/buttonImage9"
@@ -222,7 +222,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="343e56">
+        android:background="#343e56">
 
         <ImageView
             android:id="@+id/buttonImage2"
@@ -242,7 +242,7 @@
         android:layout_above="@+id/btn5"
         android:layout_marginBottom="20dp"
         android:layout_toLeftOf="@+id/btn2"
-        android:background="343e56">
+        android:background="#343e56">
 
         <ImageView
             android:id="@+id/buttonImage1"
@@ -261,7 +261,7 @@
         android:layout_above="@+id/btn5"
         android:layout_marginBottom="20dp"
         android:layout_toRightOf="@+id/btn2"
-        android:background="343e56">
+        android:background="#343e56">
 
         <ImageView
             android:id="@+id/buttonImage3"
